# filefind

./: .gitattributes  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  common.sh  completions.sh  filefind.toml  install.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
filefind/: Cargo.toml  README.md  completions.sh
filefind-cli/: Cargo.toml  README.md
filefind-cli/src/: cli.rs  config.rs  main.rs  mover.rs  test_utils.rs  utils.rs
filefind-common/: Cargo.toml
filefind-common/src/: config.rs  database.rs  lib.rs
filefind-daemon/: Cargo.toml  README.md
filefind-daemon/src/: daemon.rs  ipc_server.rs  main.rs  mft.rs  pruner.rs  scanner.rs  usn.rs  watcher.rs
filefind-tray/: Cargo.toml  README.md
filefind-tray/src/: app.rs  icons.rs  main.rs
filefind/src/: config.rs  database.rs  ipc.rs  lib.rs  types.rs
