[workspace]
resolver = "3"
members = ["filefind-cli", "filefind-common", "filefind-daemon"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
license = "MIT"
repository = "https://github.com/Esgrove/filefind"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
dirs = "6.0.0"
dunce = "1.0.5"
notify = "8.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.9"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Windows-specific
[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
]

# Internal crates
[workspace.dependencies.filefind-common]
path = "filefind-common"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
