[workspace]
resolver = "3"
members = ["filefind", "filefind-cli", "filefind-daemon", "filefind-tray"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
license = "MIT"
repository = "https://github.com/Esgrove/filefind"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
dirs = "6.0.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_Pipes",
]

[workspace.dependencies.filefind]
path = "filefind"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
