[package]
name = "filefind-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for filefind file search"

[[bin]]
name = "filefind"
path = "src/main.rs"

[dependencies]
filefind = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
ctrlc = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.24"

[lints]
workspace = true
