[package]
name = "filefind-daemon"
description = "Background file indexing daemon for filefind"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "filefindd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
filefind = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crate-specific dependencies
futures = "0.3"
notify = "8.2"
tokio = { version = "1.48", features = ["full"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true
