[package]
name = "filefind-tray"
description = "Filefind system tray application"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "filefind-tray"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
filefind = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

tray-icon = "0.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
