[package]
name = "filefind"
description = "Shared library for filefind - configuration, database, and common types"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

# Crate-specific dependencies
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[lints]
workspace = true
